@@ -93,6 +93,7 @@ WHAT IS NEW?
       until you create and delete at least a million slices. Good enough. [Ralph]
     * "hero uses level mp" [James]
     * "delete map state" takes customid arg, like other mapstate commands [Ralph]
+    * "get/set rect fuzzy zoom", "get/set rect stationary pattern" [Ralph]
 
   *** Changes
     * Removed support for optional prefixes on .ini config settings (e.g.
